edited the template, add latest fa

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>PE DATA - the private equity asset database</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,11 +17,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><a href="#">PE Data</a></h1>
+					<p>Know about private equity deals<br />
+					before they even happen</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
+						<li><a href="#" class="button primary icon solid fa-sign-in">Register</a></li>
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
@@ -31,13 +31,13 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>The clearst and most authoritative database of<br />
+					UK-based private equity owned assets</h2>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
-					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
+					<li><span class="icon solid fa-chart-area"><span class="label">Analytics</span></span></li>
+					<li><span class="icon solid fa-chart-bar"><span class="label">Historical Deals</span></span></li>
+					<li><span class="icon solid fa-chart-line"><span class="label">Ownership</span></span></li>
 				</ul>
 			</section>
 
@@ -47,31 +47,37 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Rich database of assets by acquisition date</h3>
+							<p>Spot which assets are reaching the end of their owner's typical hold period and are most likely to next come to market. Predict which assets are likely to be put up for sale, allowing you to get up to speed on them ahead of the rest of the private equity community.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Filter by your sectors of interest</h3>
+							<p>Access a comprehensive database of over 4,000 companies filterable by sector and sub-sector, allowing you to focus on the companies in your area of specialism.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Constantly up-to-date fund profiles</h3>
+							<p>See a timeline of all acquisitions made by each fund so you constantly know each private equity firm's most recent activity. No more frantic googling your clients again before a meeting - all their assets, current and previous - in one clear and simple to use dashboard at the touch of a button, constantly updated and refreshed.</p>
 						</div>
 					</section>
 					<section class="special">
 						<ul class="icons labeled">
-							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
+							<li><span class="icon solid fa-database"><span class="label">By Fund</span></span></li>
+							<li><span class="icon solid fa-industry"><span class="label">By Sector</span></span></li>
+							<li><span class="icon solid fa-calendar-check"><span class="label">By Hold Length</span></span></li>
+							<li><span class="icon solid fa-calendar"><span class="label">By Acquisition Date</span></span></li>
+							<li><span class="icon solid fa-bullseye"><span class="label">Upper/lower/mid market</span></span></li>
+							<li><span class="icon solid fa-chart-bar"><span class="label">Estimated EBITDA range</span></span></li>
+							<li><span class="icon solid fa-link"><span class="label">Press Releases</span></span></li>
+							<li><span class="icon solid fa-link"><span class="label">Deal Professionals' LinkedIn</span></span></li>
+							<li><span class="icon solid fa-link"><span class="label">Company Websites</span></span></li>
+							<li><span class="icon solid fa-file-excel"><span class="label">Export Data to Excel</span></span></li>
+							
 						</ul>
 					</section>
 				</div>
@@ -80,12 +86,12 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
+					<h2>Get ahead of your competition</h2>
+					<p>Register for the most comprehensive, up-to-date asset-first database<br />
+					of private equity owned assets in the UK.</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
+					<li><a href="#" class="button primary icon solid fa-sign-in">Register</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 			</section>
@@ -416,7 +422,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; PE Data. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
