--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Know about private equity deals<br />
 					before they even happen</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-sign-in">Register</a></li>
+						<li><a href="#signup" class="button primary icon solid fa-sign-in">Register</a></li>
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
@@ -82,6 +82,39 @@
 					</section>
 				</div>
 			</section>
+			
+			<section id="signup" class="wrapper">
+			<!-- Begin Mailchimp Signup Form -->
+			<div id="mc_embed_signup" class="inner alt">
+				<form action="https://gmail.us10.list-manage.com/subscribe/post?u=86f9c3bc4752c67608150a314&amp;id=4f29a1c7a8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<div id="mc_embed_signup_scroll">
+					<h2>Register for early access</h2>
+				<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+				<div class="mc-field-group">
+					<label for="mce-EMAIL">Work Email Address  <span class="asterisk">*</span>
+				</label>
+					<input type="email" value="" name="EMAIL" class="col-12" id="mce-EMAIL">
+				</div>
+				<div class="mc-field-group">
+					<label for="mce-FNAME">First Name </label>
+					<input type="text" value="" name="FNAME" class="col-12" id="mce-FNAME">
+				</div>
+				<div class="mc-field-group">
+					<label for="mce-LNAME">Last Name </label>
+					<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+				</div>
+					<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_86f9c3bc4752c67608150a314_4f29a1c7a8" tabindex="-1" value=""></div>
+					<div class="clear"><input type="submit" value="Register" name="subscribe" id="mc-embedded-subscribe" class="primary"></div>
+					</div>
+				</form>
+				</div>
+			</section>
+	
+	<!--End mc_embed_signup-->
 
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
@@ -91,7 +124,7 @@
 					of private equity owned assets in the UK.</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-sign-in">Register</a></li>
+					<li><a href="https://mailchi.mp/c3b2e68ece0e/pe-data" class="button primary icon solid fa-sign-in">Register</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 			</section>
