--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image right"><div class="inner"><img src="images/network-screenly.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
@@ -45,24 +45,38 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+						<div class="image"><img src="images/asset-timeline.png" alt="" /></div>
 						<div class="content">
 							<h3>Rich database of assets by acquisition date</h3>
 							<p>Spot which assets are reaching the end of their owner's typical hold period and are most likely to next come to market. Predict which assets are likely to be put up for sale, allowing you to get up to speed on them ahead of the rest of the private equity community.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
+						<div class="image"><img src="images/sector.png" alt="" /></div>
 						<div class="content">
 							<h3>Filter by your sectors of interest</h3>
 							<p>Access a comprehensive database of over 4,000 companies filterable by sector and sub-sector, allowing you to focus on the companies in your area of specialism.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/fund-timeline.png" alt="" /></div>
 						<div class="content">
 							<h3>Constantly up-to-date fund profiles</h3>
 							<p>See a timeline of all acquisitions made by each fund so you constantly know each private equity firm's most recent activity. No more frantic googling your clients again before a meeting - all their assets, current and previous - in one clear and simple to use dashboard at the touch of a button, constantly updated and refreshed.</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/hold-period.png" alt="" /></div>
+						<div class="content">
+							<h3>See assets with aging hold periods</h3>
+							<p>Filter and search by assets by the lengh of time since acquisition to get a sense of when assets are likely to come to market, and identify companies that may benefit from consulting or advisory support, allowing you to pitch your services to owners.</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/database.png" alt="" /></div>
+						<div class="content">
+							<h3>Filterable, searchable, exportable rich database</h3>
+							<p>Sort by sectors, subsectors, fund ownership, lower/mid/upper market, approximate EBITDA range and date of acquisition. Export your filtered extract to Excel to allow you to download, analyse and use in your normal business processes. </p>
 						</div>
 					</section>
 					<section class="special">
@@ -89,7 +103,7 @@
 				<form action="https://gmail.us10.list-manage.com/subscribe/post?u=86f9c3bc4752c67608150a314&amp;id=4f29a1c7a8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 					<div id="mc_embed_signup_scroll">
 					<h2>Register for early access</h2>
-				<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+
 				<div class="mc-field-group">
 					<label for="mce-EMAIL">Work Email Address  <span class="asterisk">*</span>
 				</label>
@@ -103,12 +117,15 @@
 					<label for="mce-LNAME">Last Name </label>
 					<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
 				</div>
+				<div class="indicates-required"><span class="asterisk">*</span> indicates required field</div>
+
 					<div id="mce-responses" class="clear">
 						<div class="response" id="mce-error-response" style="display:none"></div>
 						<div class="response" id="mce-success-response" style="display:none"></div>
 					</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_86f9c3bc4752c67608150a314_4f29a1c7a8" tabindex="-1" value=""></div>
-					<div class="clear"><input type="submit" value="Register" name="subscribe" id="mc-embedded-subscribe" class="primary"></div>
+					<header class="major"></header>
+							<div class="align-center"><input type="submit" value="Register" name="subscribe" id="mc-embedded-subscribe" class="primary"></div>
 					</div>
 				</form>
 				</div>
@@ -447,6 +464,52 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 			</section>
 		-->
+		<!-- FAQ -->
+		<section id="faq" class="wrapper">
+			<div class="inner">
+
+				<header class="major">
+					<h2>Frequently Asked Questions</h2>
+				</header>
+
+		<section >
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th class="col-4" >FAQ</th>
+							<th>Answer</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>How is this different from Mergermarket?</td>
+							<td>Mermarket is an excellent source for news, and this will never replace the breadth of coverage, rumours and proprietary intelligence that they provide. </br>
+							However, Mergermarket is fundamentally a news service, rather than a database. If you've ever tried searching by asset in their system, you'll know that it can be hard to filter through the sheer number of articles about each company. </br>
+							Our product puts the company as the the front and centre of the database, allowing for a clearer and easier approach for tracking private equity owned assets. </br>
+							Mergermarket is  also significantly more expensive than our product.
+						</td>
+						</tr>
+						<tr>
+							<td>Where does the data come from?</td>
+							<td>Our proprietary dataset has been compiled over several years of active monitoring of public news announcements about private equity activity in the UK. All of our information is from publicly available sources.</td>
+						</tr>
+						<tr>
+							<td>Why don't I just google this myself?</td>
+							<td>As all of our data is aggregated from publicly available sources, you can indeed do this - in fact, in our database, we provide as many links as possible back to the source URL so you can audit the information if you wish to. The value we provide is in the sheer speed, convenience, ease-of-use and comprehensiveness of the data. And it always remains up to date.</td>
+						</tr>
+						<tr>
+							<td>I already have my own internal Excel list - how is this better?</td>
+							<td>Our database is constantly kept up-to-date by a sophisticated set of scripts. We've tried in the past allocating junior team members to manage this data, but it usually takes at least a week of their time, and no sooner has it been gathered than it is out of date. It's also usually saved in a spreadsheet on some area of a shared drive only the analyst who compiled it knows where it is. With this product, the information is evergreen, easy to use, and right at your fingertips - freeing up your analysts to do more value-added work.</td>
+						</tr>
+						<tr>
+							<td>Do you have permission from the companies in your database?</td>
+							<td>All information we gather is from publicly available sources.</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
