adding more FAQ

--- a/PEData/index.html
+++ b/PEData/index.html
@@ -491,6 +491,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</td>
 						</tr>
 						<tr>
+							<td>How is this different from Prequin?</td>
+							<td>Prequin is one of the most comprehsive and extensive sources of information on private equity firms and their portfolios and we are not trying to replace your Prequin subscription. Our product does, however, provide a far easier-to-use, quicker, and more to-the-point solution for the information we cover, at a much more affordable price.</td>
+						</tr>
+						<tr>
 							<td>Where does the data come from?</td>
 							<td>Our proprietary dataset has been compiled over several years of active monitoring of public news announcements about private equity activity in the UK. All of our information is from publicly available sources.</td>
 						</tr>
@@ -504,7 +508,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</tr>
 						<tr>
 							<td>Do you have permission from the companies in your database?</td>
-							<td>All information we gather is from publicly available sources.</td>
+							<td>All information we gather is from publicly available sources, and as such has been released by the funds into the public domain. Our database does not contain material non-public information, and is compliant with all relevant regulations and legislation.</td>
 						</tr>
 					</tbody>
 				</table>
