--- a/PEData/index.html
+++ b/PEData/index.html
@@ -31,7 +31,7 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>The clearst and most authoritative database of<br />
+					<h2>The clearest and most authoritative database of<br />
 					UK-based private equity owned assets</h2>
 				</header>
 				<ul class="icons major">
