added favicon, todo.md

--- a/PEData/index.html
+++ b/PEData/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">	
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -69,7 +71,7 @@
 						<div class="image"><img src="images/hold-period.png" alt="" /></div>
 						<div class="content">
 							<h3>See assets with aging hold periods</h3>
-							<p>Filter and search by assets by the lengh of time since acquisition to get a sense of when assets are likely to come to market, and identify companies that may benefit from consulting or advisory support, allowing you to pitch your services to owners.</p>
+							<p>Filter and search by assets by the length of time since acquisition to get a sense of when assets are likely to come to market, and identify companies that may benefit from consulting or advisory support, allowing you to pitch your services to owners.</p>
 						</div>
 					</section>
 					<section class="spotlight">
