edited to add big screenshots

--- a/PEData/index.html
+++ b/PEData/index.html
@@ -149,7 +149,7 @@
 			</section>
 
 		<!-- Four -->
-		<!--
+			<!--
 			<section id="four" class="wrapper">
 				<div class="inner">
 
@@ -466,6 +466,52 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 			</section>
 		-->
+		<!-- Big Examples of content -->
+
+
+		<section id="four" class="wrapper">
+			<div class = "inner">
+
+				<header class="major">
+					<h2>Comprehensive and Detailed Featureset</h2>
+				</header>
+
+				<section>
+					<h3>Search every private equity owned asset</h3>
+					<p>Search quickly to find all assets in your relevant sectors and subsectors across all private equity owned companies in the UK.</p>
+
+					<div class="box alt">
+						<div class="row gtr-uniform">
+							<div class="col-12"><span class="image fit"><img src="images/database-example.png" alt="" /></span></div>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<h3>In-depth profiles of each company</h3>
+					<p>Quickly access detailed profiles with relevant information, descriptions and detail on each company.</p>
+
+					<div class="box alt">
+						<div class="row gtr-uniform">
+							<div class="col-12"><span class="image fit"><img src="images/company-example.png" alt="" /></span></div>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<h3>At-a-glance view of each fund's active portfolio</h3>
+					<p>Visualise each fund's assets by sector clusters to idenfity their investment patterns and approach.</p>
+
+					<div class="box alt">
+						<div class="row gtr-uniform">
+							<div class="col-12"><span class="image fit"><img src="images/cluster-example.png" alt="" /></span></div>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+
+
 		<!-- FAQ -->
 		<section id="faq" class="wrapper">
 			<div class="inner">
