--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PE DATA - the private equity asset database</title>
+		<title>PE Radar - the private equity asset database</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">PE Data</a></h1>
+					<h1><a href="#">PE Radar</a></h1>
 					<p>Know about private equity deals<br />
 					before they even happen</p>
 					<ul class="actions">
@@ -570,7 +570,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; PE Data. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; PE Radar. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
